--- a/MstShop-ServerSide.WebApi/MstShop-ServerSide.WebApi.csproj
+++ b/MstShop-ServerSide.WebApi/MstShop-ServerSide.WebApi.csproj
@@ -19,6 +19,8 @@
     <ProjectReference Include="..\MstShop-ServerSide.Core\MstShop-ServerSide.Core.csproj" />
     <ProjectReference Include="..\MstShop-ServerSide.DataLayer\MstShop-ServerSide.DataLayer.csproj" />
   </ItemGroup>
-
+	<ItemGroup>
+		<Folder Include="wwwroot\images\sliders\origin\" />
+	</ItemGroup>
 
 </Project>
