--- a/MstShop-ServerSide.WebApi/MstShop-ServerSide.WebApi.csproj
+++ b/MstShop-ServerSide.WebApi/MstShop-ServerSide.WebApi.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\images\product-galleries\" />
     <Folder Include="wwwroot\images\products\origin\" />
   </ItemGroup>
 
